set initDeploy to false by default
Signed-off-by: Aryan-sharma11 <aryan1126.sharma@gmail.com>

--- a/deployments/helm/KubeArmorOperator/values.yaml
+++ b/deployments/helm/KubeArmorOperator/values.yaml
@@ -45,6 +45,7 @@ kubearmorOperator:
   podAnnotations: {}
   podSecurityContext: {}
   securityContext: {}
+  initDeploy: false
 
 kubearmorConfig:
   defaultCapabilitiesPosture: audit
