deprecate multienforcer controller and improve annotation logic
Signed-off-by: Aryan-sharma11 <aryan1126.sharma@gmail.com>

--- a/deployments/controller/kubearmor-controller-mutating-webhook-config.yaml
+++ b/deployments/controller/kubearmor-controller-mutating-webhook-config.yaml
@@ -47,6 +47,7 @@ webhooks:
     - UPDATE
     resources:
     - pods
+    - pods/binding
   sideEffects: NoneOnDryRun
   objectSelector:
     matchExpressions:
