--- a/deployments/helm/KubeArmor/templates/secrets.yaml
+++ b/deployments/helm/KubeArmor/templates/secrets.yaml
@@ -43,6 +43,7 @@ webhooks:
     - CREATE
     - UPDATE
     resources:
-    - pods
+    - pods 
+    - pods/binding
     scope: '*'
   sideEffects: NoneOnDryRun
