add protectEnv preset and update presets api specification
Signed-off-by: rksharma95 <ramakant@accuknox.com>

--- a/deployments/CRD/KubeArmorClusterPolicy.yaml
+++ b/deployments/CRD/KubeArmorClusterPolicy.yaml
@@ -296,6 +296,19 @@ spec:
                       type: string
                     type: array
                 type: object
+              presets:
+                items:
+                  properties:
+                    action:
+                      enum:
+                      - Allow
+                      - Audit
+                      - Block
+                      type: string
+                    name:
+                      type: string
+                  type: object
+                type: array
               process:
                 properties:
                   action:
