update preset test ksp
Signed-off-by: rksharma95 <ramakant@accuknox.com>

--- a/tests/k8s_env/presets/res/ksp-preset-audit-fileless.yaml
+++ b/tests/k8s_env/presets/res/ksp-preset-audit-fileless.yaml
@@ -4,9 +4,9 @@ metadata:
   name: ksp-preset-audit-fileless
   namespace: presets
 spec:
-  action: Audit
   presets:
-  - filelessExec
+  - name: filelessExec
+    action: Audit
   selector:
     matchLabels:
       app: fileless
