--- a/tests/k8s_env/presets/res/ksp-preset-block-fileless.yaml
+++ b/tests/k8s_env/presets/res/ksp-preset-block-fileless.yaml
@@ -4,9 +4,9 @@ metadata:
   name: ksp-preset-block-fileless
   namespace: presets
 spec:
-  action: Block
   presets:
-  - filelessExec
+  - name: filelessExec
+    action: Block
   selector:
     matchLabels:
       app: fileless
