feat: adding support for excluding labels in csp and ksp for endpoint matching
Signed-off-by: Prateek <prateeknandle@gmail.com>

--- a/deployments/helm/KubeArmorOperator/crds/operator.kubearmor.com_kubearmorconfigs.yaml
+++ b/deployments/helm/KubeArmorOperator/crds/operator.kubearmor.com_kubearmorconfigs.yaml
@@ -535,6 +535,7 @@ spec:
                         key:
                           enum:
                           - namespace
+                          - label
                           type: string
                         operator:
                           enum:
