Updated crio installation to support ubuntu version 22.04
Signed-off-by: Devisri S <devisris.it2022@citchennai.net>

--- a/.github/workflows/ci-latest-release.yml
+++ b/.github/workflows/ci-latest-release.yml
@@ -44,7 +44,12 @@ jobs:
     name: Create KubeArmor latest release
     needs: check
     if: github.repository == 'kubearmor/kubearmor' && (needs.check.outputs.kubearmor == 'true' || ${{ github.ref }} != 'refs/heads/main')
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
+
+    
     permissions:
       id-token: write
     timeout-minutes: 150
@@ -108,7 +113,10 @@ jobs:
     name: Create KubeArmor stable release
     needs: [build, check]
     if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     permissions:
       id-token: write
     timeout-minutes: 60
