--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -13,7 +13,10 @@ jobs:
   push-stable-version:
     name: Create KubeArmor stable release
     if: github.repository == 'kubearmor/kubearmor'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v3
@@ -55,7 +58,10 @@ jobs:
   update-helm-chart:
     name: Update KubeArmor Helm chart version
     if: github.repository == 'kubearmor/kubearmor'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     timeout-minutes: 20
     permissions:
       contents: write
