--- a/.github/workflows/ci-test-go.yml
+++ b/.github/workflows/ci-test-go.yml
@@ -23,7 +23,10 @@ permissions: read-all
 
 jobs:
   go-fmt:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
@@ -36,7 +39,10 @@ jobs:
         working-directory: KubeArmor
 
   go-lint:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
@@ -50,7 +56,10 @@ jobs:
           path: "./KubeArmor/..."
 
   go-lint-tests:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
@@ -64,7 +73,10 @@ jobs:
           path: "./tests/..."
 
   go-sec:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
@@ -77,7 +89,10 @@ jobs:
         working-directory: KubeArmor
 
   go-vuln:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
@@ -90,7 +105,10 @@ jobs:
         working-directory: KubeArmor
 
   go-test:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
@@ -103,7 +121,10 @@ jobs:
         working-directory: KubeArmor
 
   license:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
 
