--- a/.github/workflows/ci-latest-release.yml
+++ b/.github/workflows/ci-latest-release.yml
@@ -64,12 +64,12 @@ jobs:
 
       - name: Get release tag
         id: vars
-        run: |
-          if [ ${{ github.ref }} == "refs/heads/main" ]; then
-            echo "tag=latest" >> $GITHUB_OUTPUT
-          else
-            echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-          fi  
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const ref = github.context.ref;
+            const tag = ref === "refs/heads/main" ? "latest" : ref.replace(/^refs\/[^/]+\//, "");
+            core.setOutput("tag", tag);
       
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -128,13 +128,15 @@ jobs:
 
       - name: Get tag
         id: match
-        run: |
-          value=`cat STABLE-RELEASE`
-          if [ ${{ github.ref }} == "refs/heads/$value" ]; then
-            echo "tag=true" >> $GITHUB_OUTPUT
-          else
-            echo "tag=false" >> $GITHUB_OUTPUT
-          fi
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const stableBranch = fs.readFileSync('STABLE-RELEASE', 'utf8').trim();
+            const ref = github.context.ref;
+            const isMatch = ref === `refs/heads/${stableBranch}`;
+            core.setOutput('tag', isMatch.toString());
+      
 
       - name: Login to Docker Hub
         if: steps.match.outputs.tag == 'true'
@@ -183,12 +185,15 @@ jobs:
 
       - name: Get tag
         id: tag
-        run: |
-          if [ ${{ github.ref }} == "refs/heads/main" ]; then
-            echo "tag=latest" >> $GITHUB_OUTPUT
-          else
-            echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-          fi
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const ref = github.context.ref;
+            const tag = ref === "refs/heads/main"
+              ? "latest"
+              : ref.replace(/^refs\/[^/]+\//, "");
+            core.setOutput("tag", tag);
+        
 
       - name: Build & Push KubeArmorController
         run: make docker-buildx TAG=${{ steps.tag.outputs.tag }}
