--- a/pkg/KubeArmorController/Dockerfile
+++ b/pkg/KubeArmorController/Dockerfile
@@ -2,7 +2,7 @@
 # Copyright 2022 Authors of KubeArmor
 
 # Build the manager binary
-FROM golang:1.23 as builder
+FROM golang:1.24 AS builder
 
 WORKDIR /workspace
 # Copy the Go Modules manifests
