--- a/pkg/KubeArmorOperator/Dockerfile
+++ b/pkg/KubeArmorOperator/Dockerfile
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright 2022 Authors of KubeArmor
 
-FROM docker.io/golang:1.23 as builder
+FROM docker.io/golang:1.24 AS builder
 ARG GOARCH
 ARG GOOS
 
