--- a/.github/workflows/ci-test-runner.yaml
+++ b/.github/workflows/ci-test-runner.yaml
@@ -28,7 +28,7 @@ permissions: read-all
 jobs:
   build:
     name: Checking Apparmor network tests
-    runs-on: ubuntu-latest-16-cores
+    runs-on: oracle-8cpu-32gb-x86-64-b8d6f-runner-hmfff
     env:
       RUNTIME: ${{ matrix.runtime }}
     strategy:
@@ -70,7 +70,7 @@ jobs:
           karmor install
           ls
           kubectl apply -f pkg/KubeArmorOperator/config/samples/kubearmor-test-apparmor.yaml
-          
+
       - name: Test KubeArmor using Ginkgo
         run: |
           go install -mod=mod github.com/onsi/ginkgo/v2/ginkgo
