--- a/.github/workflows/ci-test-runner.yaml
+++ b/.github/workflows/ci-test-runner.yaml
@@ -28,7 +28,7 @@ permissions: read-all
 jobs:
   build:
     name: Checking Apparmor network tests
-    runs-on: equinix-keda-runner
+    runs-on: oracle-4cpu-16gb-x86-64
     env:
       RUNTIME: ${{ matrix.runtime }}
     strategy:
