--- a/deployments/helm/KubeArmorOperator/crds/operator.kubearmor.com_kubearmorconfigs.yaml
+++ b/deployments/helm/KubeArmorOperator/crds/operator.kubearmor.com_kubearmorconfigs.yaml
@@ -552,6 +552,8 @@ spec:
                 type: boolean
               throttleSec:
                 type: integer
+              controllerPort:
+                type: integer
               tls:
                 properties:
                   enable:
