--- a/deployments/operator/operator.yaml
+++ b/deployments/operator/operator.yaml
@@ -551,6 +551,8 @@ spec:
                 type: boolean
               throttleSec:
                 type: integer
+              controllerPort:
+                type: integer
               tls:
                 properties:
                   enable:
