fix: context access for github script
Signed-off-by: Rishabh Soni <risrock02@gmail.com>

--- a/.github/workflows/ci-latest-release.yml
+++ b/.github/workflows/ci-latest-release.yml
@@ -67,7 +67,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const ref = github.context.ref;
+            const ref = context.ref;
             const tag = ref === "refs/heads/main" ? "latest" : ref.replace(/^refs\/[^/]+\//, "");
             core.setOutput("tag", tag);
       
@@ -133,7 +133,7 @@ jobs:
           script: |
             const fs = require('fs');
             const stableBranch = fs.readFileSync('STABLE-RELEASE', 'utf8').trim();
-            const ref = github.context.ref;
+            const ref = context.ref;
             const isMatch = ref === `refs/heads/${stableBranch}`;
             core.setOutput('tag', isMatch.toString());
       
@@ -188,7 +188,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const ref = github.context.ref;
+            const ref = context.ref;
             const tag = ref === "refs/heads/main"
               ? "latest"
               : ref.replace(/^refs\/[^/]+\//, "");
