--- a/.github/workflows/ci-latest-release.yml
+++ b/.github/workflows/ci-latest-release.yml
@@ -49,7 +49,7 @@ jobs:
     name: Create KubeArmor latest release
     needs: [check]
     if: github.repository == 'kubearmor/kubearmor' && (needs.check.outputs.kubearmor == 'true' || ${{ github.ref }} != 'refs/heads/main')
-    runs-on: ubuntu-latest-16-cores
+    runs-on: oracle-vm-16cpu-64gb-x86-64
     permissions:
       id-token: write
     timeout-minutes: 150
@@ -237,7 +237,7 @@ jobs:
     defaults:
       run:
         working-directory: ./pkg/KubeArmorController
-    runs-on: ubuntu-latest-16-cores
+    runs-on: oracle-vm-16cpu-64gb-x86-64
     permissions:
       id-token: write
     timeout-minutes: 150    
