--- a/.github/workflows/ci-test-ginkgo.yml
+++ b/.github/workflows/ci-test-ginkgo.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest-16-cores]
+        os: [oracle-vm-16cpu-64gb-x86-64]
         runtime: ["containerd","crio"]
     steps:
       - uses: actions/checkout@v3
