--- a/.github/workflows/ci-test-ubi-image.yml
+++ b/.github/workflows/ci-test-ubi-image.yml
@@ -68,6 +68,7 @@ jobs:
 
       - name: Generate KubeArmor artifacts
         run: |
+          export IS_COVERAGE=true
           GITHUB_SHA=$GITHUB_SHA ./KubeArmor/build/build_kubearmor.sh
 
       - name: Build Kubearmor-Operator
@@ -87,22 +88,32 @@ jobs:
       - name: Run KubeArmor
         timeout-minutes: 7
         run: |
-          docker save kubearmor/kubearmor-init:latest | sudo podman load
-          docker save kubearmor/kubearmor-ubi:latest | sudo podman load
+          docker save kubearmor/kubearmor-test-init:latest | sudo podman load
+          sudo podman tag docker.io/kubearmor/kubearmor-test-init:latest kubearmor/kubearmor-test-init:latest
+
+          docker save kubearmor/kubearmor-ubi-test:latest | sudo podman load
+          sudo podman tag docker.io/kubearmor/kubearmor-ubi-test:latest kubearmor/kubearmor-ubi-test:latest
+
           docker save kubearmor/kubearmor-operator:latest | sudo podman load
+          sudo podman tag docker.io/kubearmor/kubearmor-operator:latest kubearmor/kubearmor-operator:latest
+
           docker save kubearmor/kubearmor-snitch:latest | sudo podman load
-          
-          if [ ${{ steps.filter.outputs.controller }} == 'true' ]; then 
+          sudo podman tag docker.io/kubearmor/kubearmor-snitch:latest kubearmor/kubearmor-snitch:latest
+
+          if [ ${{ steps.filter.outputs.controller }} == 'true' ]; then
             docker save kubearmor/kubearmor-controller:latest | sudo podman load
+            sudo podman tag docker.io/kubearmor/kubearmor-controller:latest kubearmor/kubearmor-controller:latest
           fi
           if [[ ${{ steps.filter.outputs.multiubuntu }} == 'true' ]]; then
             docker save kubearmor/ubuntu-w-utils:latest | sudo podman load
-          fi          
+            sudo podman tag docker.io/kubearmor/ubuntu-w-utils:latest kubearmor/ubuntu-w-utils:latest
+          fi
           
-          helm upgrade --install kubearmor-operator ./deployments/helm/KubeArmorOperator -n kubearmor --create-namespace --set kubearmorOperator.image.tag=latest
-          kubectl get pods -A
+          docker system prune -a -f 
+          docker buildx prune -a -f
+          helm upgrade --install kubearmor-operator ./deployments/helm/KubeArmorOperator -n kubearmor --create-namespace --set kubearmorOperator.image.tag=latest --set kubearmorOperator.annotateExisting=true
           kubectl wait --for=condition=ready --timeout=5m -n kubearmor pod -l kubearmor-app=kubearmor-operator
-
+          kubectl get pods -A
           if [[ ${{ steps.filter.outputs.controller }} == 'true' ]]; then
             kubectl apply -f pkg/KubeArmorOperator/config/samples/kubearmor-ubi-test.yaml --dry-run=client -o json | \
             jq '.spec.kubearmorControllerImage.imagePullPolicy = "Never"' | \
@@ -119,23 +130,92 @@ jobs:
             kubectl rollout status --timeout=5m deployment -n kubearmor -l kubearmor-app=kubearmor-controller -n kubearmor
             kubectl get pods -A
           done
-      
-      - name: Operator may take upto 10 sec to enable TLS, Sleep for 15Sec
-        run: |
-          sleep 15
 
+          sleep 10
+          DAEMONSET_NAME=$(kubectl get daemonset -n kubearmor -o jsonpath='{.items[0].metadata.name}')
+          echo "DaemonSet: $DAEMONSET_NAME"
+
+          kubectl patch daemonset $DAEMONSET_NAME -n kubearmor --type='json' -p='[
+            {
+              "op": "add",
+              "path": "/spec/template/spec/volumes/-",
+              "value": {
+                "name": "coverage-storage",
+                "hostPath": {
+                  "path": "/coverage",
+                  "type": "DirectoryOrCreate"
+                }
+              }
+            },
+            {
+              "op": "add",
+              "path": "/spec/template/spec/containers/0/volumeMounts/-",
+              "value": {
+                "mountPath": "/coverage",
+                "name": "coverage-storage"
+              }
+            },
+            {
+              "op": "add",
+              "path": "/spec/template/spec/containers/0/args/-",
+              "value": "-test.coverprofile=/coverage/coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out"
+            }
+          ]'
+
+          sleep 15
+          
       - name: make changes in multiubuntu-deployment
         working-directory: ./tests/k8s_env
         if: steps.filter.outputs.multiubuntu == 'true'
         run: |
           grep -rl "kubearmor/ubuntu-w-utils:latest" ./ | while read -r file; do sed -i 's/imagePullPolicy: Always/imagePullPolicy: Never/g' "$file"; done
-      
+
+      - name: Get KubeArmor POD info
+        run: |
+          DAEMONSET_NAME=$(kubectl get daemonset -n kubearmor -o jsonpath='{.items[0].metadata.name}')
+          LABEL_SELECTOR=$(kubectl get daemonset $DAEMONSET_NAME -n kubearmor -o jsonpath='{.spec.selector.matchLabels}' | jq -r 'to_entries[] | "\(.key)=\(.value)"' | paste -sd, -)
+          POD_NAME=$(kubectl get pods -n kubearmor -l "$LABEL_SELECTOR" -o jsonpath='{.items[0].metadata.name}')
+          echo "Pod: $POD_NAME"
+          echo "POD_NAME=$POD_NAME" >> $GITHUB_ENV
+
       - name: Test KubeArmor using Ginkgo
         run: |
           go install -mod=mod github.com/onsi/ginkgo/v2/ginkgo
           make
         working-directory: ./tests/k8s_env
         timeout-minutes: 30
+
+      - name: Kill KubeArmor process in the pod
+        run: |
+          echo "Listing all processes in the pod"
+          kubectl exec ${{ env.POD_NAME }} -n kubearmor -c kubearmor -- ps aux
+
+          KUBEARMOR_PID=$(kubectl exec ${{ env.POD_NAME }} -n kubearmor -c kubearmor -- \
+            sh -c "ps aux | grep '[k]ubearmor-test' | awk '{print \$2}'")
+
+          if [ -n "$KUBEARMOR_PID" ]; then
+            echo "Killing KubeArmor PID: $KUBEARMOR_PID"
+            kubectl exec ${{ env.POD_NAME }} -n kubearmor -c kubearmor -- \
+              sh -c "kill -2 $KUBEARMOR_PID"
+          else
+            echo "No KubeArmor process found to kill."
+          fi
+
+          sleep 10
+        env:
+          POD_NAME: ${{ env.POD_NAME }}
+
+      - name: Extract coverage file
+        run: |
+          for i in {1..24}; do
+            if [ -f /coverage/coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out ]; then
+              cp /coverage/coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out
+              break
+            fi
+            sleep 5
+          done
+          ls -l
+        working-directory: KubeArmor
 
       - name: Get karmor sysdump
         if: ${{ failure() }}
@@ -157,8 +237,13 @@ jobs:
         if: ${{ always() }}
         run: |
           go install github.com/modocache/gover@latest
-          gover
-          go tool cover -func=gover.coverprofile
+          ls -l
+          if [ -f coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out ]; then
+            gover
+            go tool cover -func coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out
+          else
+            echo "Coverage file not found, skipping coverage report."
+          fi
         working-directory: KubeArmor
         env:
           GOPATH: /home/vagrant/go
@@ -166,8 +251,14 @@ jobs:
         if: ${{ always() }}
         with:
           files: ./KubeArmor/gover.coverprofile
+
+      - name: Upload coverage file
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-k8s-${{ matrix.os }}-${{ matrix.runtime }}
+          path: KubeArmor/coverage_k8s_${{ matrix.os }}_${{ matrix.runtime }}.out
+
       - name: Run cleanup
         if: ${{ always() }}
         run: ./.github/workflows/cleanup.sh
-    
-
