--- a/deployments/podman/docker-compose.yaml
+++ b/deployments/podman/docker-compose.yaml
@@ -14,7 +14,6 @@ services:
       - "/sys/kernel/debug:/sys/kernel/debug:ro,z"
       - "/usr/src:/usr/src:z"
       - "/media/root/etc/os-release:/media/root/etc/os-release:ro,z"
-      - "/etc/containers/oci/hooks.d/:/etc/containers/oci/hooks.d/:rw,z"
       - "/usr/share/kubearmor:/usr/share/kubearmor:rw,z"
     restart: on-failure
     privileged: true
@@ -34,9 +33,9 @@ services:
     depends_on:
       kubearmor-init:
         condition: service_completed_successfully
-    hostname: cheithanya
+    hostname: kubearmor
     container_name: kubearmor
-    image: "rootxrishabh/podmankubearmor:latest"
+    image: "ttl.sh/kubearmorpodman:48h"
     pull_policy: "always"
     user: root
     command:
@@ -45,13 +44,13 @@ services:
       - "-enableKubeArmorHostPolicy"
       - "-visibility=process,network"
       - "-hostVisibility=process,network"
-      - "-criSocket=unix:///run/podman/podman.sock"
       - "-defaultFilePosture=audit"
       - "-defaultNetworkPosture=audit"
       - "-defaultCapabilitiesPosture=audit"
       - "-hostDefaultFilePosture=audit"
       - "-hostDefaultNetworkPosture=audit"
       - "-hostDefaultCapabilitiesPosture=audit"
+      - "-useOCIHooks=true"
     labels:
       app: kubearmor
     volumes:
@@ -60,10 +59,6 @@ services:
       - "/sys/kernel/security:/sys/kernel/security"
       - "/sys/kernel/debug:/sys/kernel/debug"
       - "/etc/apparmor.d:/etc/apparmor.d"
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/run/docker:/run/docker"
-      - "/var/lib/docker:/var/lib/docker"
-      - "/etc/containers/oci/hooks.d/:/etc/containers/oci/hooks.d/:rw"
       - "/usr/share/kubearmor:/usr/share/kubearmor:rw"
       - "/var/run/kubearmor:/var/run/kubearmor:rw"
     restart: always
