fix system monitor compilation on rhel kernels
Signed-off-by: rksharma95 <ramakant@accuknox.com>

--- a/KubeArmor/BPF/Makefile.vars
+++ b/KubeArmor/BPF/Makefile.vars
@@ -72,6 +72,26 @@ else
 	 	 	-include $(KRNDIR)/include/linux/kconfig.h
 endif
 
+# rhel build version
+RHEL_BUILD := $(shell echo "$(UNAME_R)" | sed -nE 's/.*-([0-9]+)\..*\.el[0-9]+(_[0-9]+)?\..*/\1/p')
+
+# rhel build version -ge 400
+RHEL_BUILD_GTE_400 := 0
+
+ifneq ($(strip $(RHEL_BUILD)),)
+$(info RHEL compatible kernel, build: $(RHEL_BUILD))
+    RHEL_BUILD_GTE_400 := $(shell [ $(RHEL_BUILD) -ge 400 ] && echo 1 || echo 0)
+    ifeq ($(RHEL_BUILD_GTE_400),1)
+        $(info RHEL build is greater or equal to 400)
+    else
+        $(info RHEL build is less than 400)
+    endif
+
+    INC_F += -DRHEL_BUILD_GTE_400
+else
+    $(info Non-RHEL kernel, skipping RHEL-specific logic)
+endif
+
 KF = $(INC_F) -I$(LIBBPF)/src \
 	 -DLINUX_VERSION_MAJOR=$(KRNV_X) \
 	 -DLINUX_VERSION_PATCHLEVEL=$(KRNV_Y) \
