fix code coverage issue
Signed-off-by: Aryan-sharma11 <aryan1126.sharma@gmail.com>

--- a/.github/workflows/ci-test-ginkgo.yml
+++ b/.github/workflows/ci-test-ginkgo.yml
@@ -254,9 +254,12 @@ jobs:
           else
             echo "Coverage file not found, skipping coverage report."
           fi
+        
         working-directory: KubeArmor
         env:
           GOPATH: /home/runner/go
+          GOCACHE: ${{ runner.temp }}/go-cache
+          GOMODCACHE: ${{ runner.temp }}/go-mod-cache
 
       - name: Upload coverage file
         if: ${{ always() }}
