--- a/deployments/helm/KubeArmor/templates/crds/hsp.yaml
+++ b/deployments/helm/KubeArmor/templates/crds/hsp.yaml
@@ -360,7 +360,46 @@ spec:
                       - fromSource
                       - protocol
                       type: object
-                    type: array
+                    type: array       
+                  egress:
+                    type: object
+                    properties:
+                      limitSize:
+                        type: string
+                        pattern: "^[0-9]+[ ]?(G|M)$"
+                      limitCount:
+                        type: string
+                        pattern: "^[0-9]+$"
+                      duration: 
+                        type: string
+                        pattern: "^[0-9]+[ ]?(s|m|h)$"
+                      message:
+                        type: string
+                    required:
+                      - duration
+                    anyOf:
+                      - required: ["limitSize"]
+                      - required: ["limitCount"]
+
+                  ingress:
+                    type: object
+                    properties:
+                      limitSize:
+                        type: string
+                        pattern: "^[0-9]+[ ]?(G|M)$"
+                      limitCount:
+                        type: string
+                        pattern: "^[0-9]+$"
+                      duration: 
+                        type: string
+                        pattern: "^[0-9]+[ ]?(s|m|h)$"
+                      message:
+                        type: string
+                    required:
+                      - duration
+                    anyOf:
+                      - required: ["limitSize"]
+                      - required: ["limitCount"]
                   message:
                     type: string
                   severity:
