feature to enable/disable system monitoring added
Signed-off-by: Umesh Bhatt <umesh.bhatt2002@gmail.com>

--- a/deployments/helm/KubeArmor/templates/configmap.yaml
+++ b/deployments/helm/KubeArmor/templates/configmap.yaml
@@ -7,6 +7,7 @@ data:
   alertThrottling: {{ .Values.kubearmorConfigMap.alertThrottling | quote }}
   maxAlertPerSec: {{ .Values.kubearmorConfigMap.maxAlertPerSec | quote }}
   throttleSec: {{ .Values.kubearmorConfigMap.throttleSec | quote }}
+  disableSystemMonitor: {{ .Values.kubearmor.disableSystemMonitor }}
 kind: ConfigMap
 metadata:
   labels:
