fix(KubeArmor helm): added resources property in values.yaml file
Signed-off-by: Fernando Paz Silva Cavalcante <fpaz392@gmail.com>

--- a/deployments/helm/KubeArmor/templates/deployment.yaml
+++ b/deployments/helm/KubeArmor/templates/deployment.yaml
@@ -109,10 +109,10 @@ spec:
             port: 8081
           initialDelaySeconds: 5
           periodSeconds: 10
+        {{- with .Values.kubearmorRelay.resources }}
         resources:
-          requests:
-            cpu: 10m
-            memory: 64Mi
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
