fix(helm): added kubearmorController resources property
Signed-off-by: Fernando Paz Silva Cavalcante <fpaz392@gmail.com>

--- a/deployments/helm/KubeArmor/values.yaml
+++ b/deployments/helm/KubeArmor/values.yaml
@@ -105,6 +105,11 @@ kubearmorController:
     failurePolicy: Ignore
   # kubearmor-controller imagePullPolicy
   imagePullPolicy: Always
+  # Set resource limits — KubeArmor’s memory usage tends to grow significantly over time.
+  resources:
+    requests:
+      cpu: 10m
+      memory: 64Mi
 
 kubearmorConfigMap:
   defaultFilePosture: audit
