--- a/deployments/helm/KubeArmor/templates/deployment.yaml
+++ b/deployments/helm/KubeArmor/templates/deployment.yaml
@@ -43,6 +43,10 @@ spec:
           value: {{ quote .Values.kubearmorRelay.enableStdoutMsg }}
         ports:
         - containerPort: 32767
+        {{- with .Values.kubearmorRelay.resources }}
+        resources:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         {{- if .Values.tls.enabled }}
         volumeMounts:
           {{- toYaml .Values.kubearmorRelay.tls.certVolumeMount | trim | nindent 10 }}
@@ -109,7 +113,7 @@ spec:
             port: 8081
           initialDelaySeconds: 5
           periodSeconds: 10
-        {{- with .Values.kubearmorRelay.resources }}
+        {{- with .Values.kubearmorController.resources }}
         resources:
           {{- toYaml . | nindent 10 }}
         {{- end }}
